# playwright_ui_testing

playwright_ui_testing/: pyproject.toml  test.json
playwright_ui_testing/tests/: conftest.py
playwright_ui_testing/tests/features/: test_login.feature
playwright_ui_testing/tests/pages/: test_login_pom.py
playwright_ui_testing/tests/steps/: step_definitions.py
